tests/syntax_error/bad_struct_name.jou
struct Foo:
    1: int  # Error: expected a method or a struct field, got an integer
